fix: remove padding from dropdown anchor elements for improved spacing

--- a/src/layout/nav/index.scss
+++ b/src/layout/nav/index.scss
@@ -68,7 +68,6 @@ header {
 
             a {
                 display: block;
-                padding: 10px 20px;
                 color: var(--main-font);
                 text-decoration: none;
                 transition: background 0.1s;
